--- a/app/src/main/res/layout/fragment_recent_transaction_rummy.xml
+++ b/app/src/main/res/layout/fragment_recent_transaction_rummy.xml
@@ -28,8 +28,7 @@
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/constraintLayout"
-          >
+            app:layout_constraintTop_toBottomOf="@id/constraintLayout">
 
             <TextView
                 android:id="@+id/txtWalletBalance"
