mini walled and bug fixed

--- a/app/src/main/res/layout/item_recent_transcation_rummy.xml
+++ b/app/src/main/res/layout/item_recent_transcation_rummy.xml
@@ -130,7 +130,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:setSrcCompact="@{@drawable/ic_arrow_up}"
-                        app:tint="@color/alertRed" />
+                        app:tint="@color/silver_two" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
