--- a/app/src/main/res/layout/item_recent_transcation_rummy.xml
+++ b/app/src/main/res/layout/item_recent_transcation_rummy.xml
@@ -138,7 +138,7 @@
                     android:id="@+id/detailLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:visibility="@{viewModel.data.showDetailView==1?View.VISIBLE:View.GONE}"
+                    android:visibility="@{viewModel.data.showDetailView==1?View.VISIBLE:View.GONE,default=gone}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
